# kraken-client

./: Cargo.toml  README.md
examples/: simple_client.rs  websocket.rs
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  utils.rs
src/api/: mod.rs  private.rs  public.rs  rate_limiter.rs  websocket.rs
src/models/: account.rs  market.rs  mod.rs  trading.rs  websocket.rs
