[package]
name = "na-kraken-client"
version = "0.1.1"
edition = "2021"
description = "A Rust client for the Kraken cryptocurrency exchange API"
authors = ["Kyle Johns <kjohns1337@gmail.com>"]
license = "MIT"
repository = "https://github.com/nothingalike/kraken-client"
readme = "README.md"
keywords = ["cryptocurrency", "kraken", "api", "trading", "exchange"]
categories = ["api-bindings", "web-programming", "asynchronous"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
url = "2.4"
log = "0.4"
futures = "0.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
wiremock = "0.5"

[features]
default = []
blocking = ["reqwest/blocking"]
